--- a/Web_App/templates/display_files.html
+++ b/Web_App/templates/display_files.html
@@ -36,6 +36,8 @@
         word-wrap: break-word;
         max-width: 100%;
         font-size: 16px;
+        overflow-y: auto; /* Add scroll inside box */
+        height: 200px; /* Adjust the height value to your liking */
       }
     </style>
     <script>
